--- a/views/team.erb
+++ b/views/team.erb
@@ -5,7 +5,13 @@
   <title>Basketball Team</title>
  </head>
  <body>
- 
+  <h1>Team Name: <%= @team_name %></h1>
+  <p>Coach: <%= @coach %></p>
+    <p>Point Guard: <%= @point %></p>
+     <p>Shooting Guard: <%= @shoot %></p>
+      <p>Small Forward: <%= @small %></p>
+       <p>Power Forward: <%= @power %></p>
+        <p>Center: <%= @center %></p>
 
 
  </body>
